--- a/README.rdoc
+++ b/README.rdoc
@@ -1,27 +1,4 @@
-== README
-
-This README would normally document whatever steps are necessary to get the
-application up and running.
-
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
+<h3>Wireframes</h3>
 
 http://www.gliffy.com/go/publish/image/7057691/M.png
 
