--- a/README.rdoc
+++ b/README.rdoc
@@ -1,3 +1,19 @@
+TwitterBURST
+
+
+User Stories
+A user can sign in with Twitter and be authenticated / saved to db
+A user can play a game against the computer
+A user can see tweets with their hashtag (and computer's) coming through in real time
+A user can see the circle growing with each new tweet
+A user can see the match scoreboard change with each new tweet
+When a user wins, their circle will blow up and they will be congratulated
+A user's winning history will be saved to their account
+A user can check the user leaderboard
+A user can check the hashtag leaderboard for the app
+A user can see how many matches they have played / won
+A user can play a 30 second game
+
 <h3>Wireframes</h3>
 
 http://www.gliffy.com/go/publish/image/7057691/M.png
